Add validation to insert employee route
